<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/player_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="440dp"
        android:background="@null"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrowback" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="512px"
        android:layout_height="512px"
        android:layout_marginTop="56dp"
        android:layout_marginStart="@dimen/twenty_four"
        android:layout_marginEnd="@dimen/twenty_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/album" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Yersterday (Remastered 2009)"
        android:textSize="@dimen/twenty_four"
        android:layout_marginStart="@dimen/twenty_four"
        android:layout_marginEnd="@dimen/twenty_four"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="@dimen/twenty_four"
        android:layout_marginEnd="@dimen/twenty_four"
        android:text="The Beatles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <ImageButton
        android:id="@+id/player_add_to_playlist_butto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twenty_four"
        android:layout_marginStart="@dimen/twenty_four"
        android:background="@null"
        android:contentDescription="@string/as_header_text"
        android:src="@drawable/btn_add_to_playlist"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
       />

    <ImageButton
        android:id="@+id/player_play_butto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen"
        android:background="@null"
        android:contentDescription="@string/as_header_text"
        android:src="@drawable/btn_play"
        app:layout_constraintBottom_toBottomOf="@+id/player_add_to_playlist_butto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_add_to_playlist_butto"/>

    <ImageButton
        android:id="@+id/player_add_to_favorites_butto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/twenty_four"
        android:background="@null"
        android:contentDescription="@string/as_header_text"
        android:src="@drawable/btn_add_to_favorites"
        app:layout_constraintBottom_toBottomOf="@+id/player_play_butto"
        app:layout_constraintTop_toTopOf="@+id/player_play_butto"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/player_track_property_length_pl"
        style="@style/PlayerTrackPropertyValue"
        android:layout_marginTop="24dp"
        android:text="5:35"
        app:layout_constraintEnd_toEndOf="@+id/player_play_butto"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/player_play_butto"
        app:layout_constraintTop_toBottomOf="@+id/player_play_butto" />

    <TextView
        android:id="@+id/player_track_value_albu"
        style="@style/PlayerTrackPropertyTitle"
        android:layout_marginStart="@dimen/sixteen"
        android:layout_marginTop="@dimen/twenty_four"
        android:text="Длительность"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_track_property_length_pl" />

    <TextView
        android:id="@+id/player_track_property_length_plu"
        style="@style/PlayerTrackPropertyValue"
        android:layout_marginEnd="@dimen/sixteen"
        android:text="5:35"
        app:layout_constraintBottom_toBottomOf="@+id/player_track_value_albu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_track_value_albu" />

    <TextView
        android:id="@+id/player_track_property_albu"
        style="@style/PlayerTrackPropertyTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/player_track_property_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_track_value_albu" />

    <TextView
        android:id="@+id/player_track_value_al"
        style="@style/PlayerTrackPropertyValue"
        android:layout_marginEnd="16dp"
        android:text="Yesterday(Remastered 2009)"
        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_albu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_track_property_albu" />

    <TextView
        android:id="@+id/player_track_property_releas"
        style="@style/PlayerTrackPropertyTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/player_track_property_release"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_track_property_albu" />

    <TextView
        android:id="@+id/player_track_value_releas"
        style="@style/PlayerTrackPropertyValue"
        android:layout_marginEnd="16dp"
        android:text="1965"
        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_releas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_track_property_releas" />

    <TextView
        android:id="@+id/player_track_property_genr"
        style="@style/PlayerTrackPropertyTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/player_track_property_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_track_property_releas" />

    <TextView
        android:id="@+id/player_track_value_genr"
        style="@style/PlayerTrackPropertyValue"
        android:layout_marginEnd="16dp"
        android:text="Rock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_track_property_genr"
        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_genr"/>

    <TextView
        android:id="@+id/player_track_property_countr"
        style="@style/PlayerTrackPropertyTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/player_track_property_country"
        app:layout_constraintTop_toBottomOf="@+id/player_track_property_genr"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/player_track_value_countr"
        style="@style/PlayerTrackPropertyValue"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Великобритания"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/player_track_property_countr"
        app:layout_constraintTop_toTopOf="@+id/player_track_property_countr"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>